--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,21 @@ OpenCVTracking/OpenCVTracking.sln
 OpenCVTracking/OpenCVTracking/OpenCVTracking.vcxproj
 OpenCVTracking/OpenCVTracking/OpenCVTracking.vcxproj.filters
 OpenCVTracking/OpenCVTracking/OpenCVTracking.vcxproj.user
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/3c983859-3c31-46b2-8e44-29a676b2c7c8.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/a1642702-a651-4da1-bb63-830ccaeb17d2.vsidx
+OpenCVTracking/.vs/OpenCVTracking/v17/.suo
+OpenCVTracking/.vs/OpenCVTracking/v17/DocumentLayout.backup.json
+OpenCVTracking/.vs/OpenCVTracking/v17/DocumentLayout.json
+OpenCVTracking/OpenCVTracking/Test.cpp
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.log
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/CL.command.1.tlog
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/CL.read.1.tlog
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/CL.write.1.tlog
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/link.command.1.tlog
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/link.read.1.tlog
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/link.write.1.tlog
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/OpenCVTracking.lastbuildstate
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/unsuccessfulbuild
+OpenCVTracking/OpenCVTracking/x64/Debug/Test.obj
+OpenCVTracking/OpenCVTracking/x64/Debug/vc143.idb
+OpenCVTracking/OpenCVTracking/x64/Debug/vc143.pdb
