--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/unsuccessfulbuild
 OpenCVTracking/OpenCVTracking/x64/Debug/Test.obj
 OpenCVTracking/OpenCVTracking/x64/Debug/vc143.idb
 OpenCVTracking/OpenCVTracking/x64/Debug/vc143.pdb
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c47b0141-a432-4224-9e28-343da2456ce9.vsidx
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.exe.recipe
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.ilk
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/Cl.items.tlog
+OpenCVTracking/OpenCVTracking/x64/Debug/OpenCVTracking.tlog/link.secondary.1.tlog
+OpenCVTracking/x64/Debug/OpenCVTracking.exe
+OpenCVTracking/x64/Debug/OpenCVTracking.pdb
