--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ OpenCVTracking/OpenCVTracking/x64/Debug/Video.obj
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/dae580f6-72cc-4f21-8e45-bd1fdb605429.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c1de49e6-5a16-492a-b9b0-4a97a94c5ab3.vsidx
 OpenCVTracking/OpenCVTracking/x64/Debug/webcam_test.obj
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/142133f5-906a-40e3-9fd5-bfa5e263cb88.vsidx
+OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/7e15c4be41ce1a69/COLOR_BALL_TRACKER.ipch
