--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c1de49e6-5a16-492a-b9b0-4a97a
 OpenCVTracking/OpenCVTracking/x64/Debug/webcam_test.obj
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/142133f5-906a-40e3-9fd5-bfa5e263cb88.vsidx
 OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/7e15c4be41ce1a69/COLOR_BALL_TRACKER.ipch
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/ea14f0d7-22ca-4c5d-8505-72c958900663.vsidx
+OpenCVTracking/OpenCVTracking/x64/Debug/color_ball_tracker.obj
