--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/142133f5-906a-40e3-9fd5-bfa5e
 OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/7e15c4be41ce1a69/COLOR_BALL_TRACKER.ipch
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/ea14f0d7-22ca-4c5d-8505-72c958900663.vsidx
 OpenCVTracking/OpenCVTracking/x64/Debug/color_ball_tracker.obj
+OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/e39ce59df08379bb/OPENCV_TRACKER_DEMO.ipch
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/f726ef13-6ca3-4ff7-a032-a8537d690767.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/865a65ee-b0fe-4d89-9b83-0268fce9b2d8.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/76518bfd-711a-4e61-9e94-0d77e779a3c2.vsidx
