--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,18 @@ OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/e39ce59df08379bb/OPENCV_TRACK
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/f726ef13-6ca3-4ff7-a032-a8537d690767.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/865a65ee-b0fe-4d89-9b83-0268fce9b2d8.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/76518bfd-711a-4e61-9e94-0d77e779a3c2.vsidx
+OpenCVTracking/OpenCVTracking/color_ball_tracker.cpp
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/1ecd11d3-b4df-4423-87ba-9931c699a1c0.vsidx
+OpenCVTracking/OpenCVTracking/color_ball_tracker.cpp
+OpenCVTracking/OpenCVTracking/color_ball_tracker.cpp
+OpenCVTracking/OpenCVTracking/color_ball_tracker.cpp
+OpenCVTracking/OpenCVTracking/color_ball_tracker.cpp
+OpenCVTracking/OpenCVTracking/color_ball_tracker.cpp
+OpenCVTracking/OpenCVTracking/color_ball_tracker.cpp
+.vs/slnx.sqlite
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/6ce1d093-e587-4803-8a21-bf8a2b5cf6f1.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/a99c9da8-44ff-40e5-9cb4-d941c767e3c8.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/bbafe5ac-2806-429b-8c75-66fbe223d53a.vsidx
+OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/7f01d2ca6fea3fcd/MULTI_COLOR_TRACKER.ipch
+OpenCVTracking/.vs/OpenCVTracking/v17/Solution.VC.db
+OpenCVTracking/OpenCVTracking/x64/Debug/multi_color_tracker.obj
