--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/bbafe5ac-2806-429b-8c75-66fbe
 OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/7f01d2ca6fea3fcd/MULTI_COLOR_TRACKER.ipch
 OpenCVTracking/.vs/OpenCVTracking/v17/Solution.VC.db
 OpenCVTracking/OpenCVTracking/x64/Debug/multi_color_tracker.obj
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/8356cef7-fbe8-4174-a88b-b13b7d965223.vsidx
