--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ OpenCVTracking/.vs/OpenCVTracking/v17/Solution.VC.db
 OpenCVTracking/OpenCVTracking/x64/Debug/multi_color_tracker.obj
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/8356cef7-fbe8-4174-a88b-b13b7d965223.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/6a410cba-be72-493a-8934-2eb4e689fef8.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/93c96aef-d2bb-42cb-8d28-ff64e684559b.vsidx
