--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,8 @@ OpenCVTracking/OpenCVTracking/x64/Debug/multi_color_tracker.obj
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/8356cef7-fbe8-4174-a88b-b13b7d965223.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/6a410cba-be72-493a-8934-2eb4e689fef8.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/93c96aef-d2bb-42cb-8d28-ff64e684559b.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/9dc4ed2f-6ca8-4b38-bec0-25ab901e9b63.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c1cab493-7291-45a1-804d-ca9cf7347b04.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c959d9cf-c148-48f0-8ed3-2cb44eac23f9.vsidx
+OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/71d1fc36450f9edc/PONG_COLORTEST_SIMPLEGAME.ipch
+OpenCVTracking/OpenCVTracking/x64/Debug/Pong_ColorTest_SimpleGame.obj
