--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c1cab493-7291-45a1-804d-ca9cf
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c959d9cf-c148-48f0-8ed3-2cb44eac23f9.vsidx
 OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/71d1fc36450f9edc/PONG_COLORTEST_SIMPLEGAME.ipch
 OpenCVTracking/OpenCVTracking/x64/Debug/Pong_ColorTest_SimpleGame.obj
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/edaa87d1-9e50-4c83-9ed3-cad5d2918404.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/a67b29d3-b558-41e7-8b64-16a2240ba85d.vsidx
