--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,7 @@ OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/71d1fc36450f9edc/PONG_COLORTE
 OpenCVTracking/OpenCVTracking/x64/Debug/Pong_ColorTest_SimpleGame.obj
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/edaa87d1-9e50-4c83-9ed3-cad5d2918404.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/a67b29d3-b558-41e7-8b64-16a2240ba85d.vsidx
+OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/5fef583cedea0748/KALMAN_BALL_TRACKER.ipch
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/e882debc-4095-4d74-bcd5-a259558717f0.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/44987a67-1c6d-40ee-8280-4c541f290152.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/5e3f869f-33d5-4cc4-8df1-6aab13ca935a.vsidx
