--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/5fef583cedea0748/KALMAN_BALL_
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/e882debc-4095-4d74-bcd5-a259558717f0.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/44987a67-1c6d-40ee-8280-4c541f290152.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/5e3f869f-33d5-4cc4-8df1-6aab13ca935a.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/81eb160b-316a-4669-8306-8e75a6b9dfb8.vsidx
+OpenCVTracking/OpenCVTracking/x64/Debug/kalman_ball_tracker.obj
