--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,7 @@ OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/44987a67-1c6d-40ee-8280-4c541
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/5e3f869f-33d5-4cc4-8df1-6aab13ca935a.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/81eb160b-316a-4669-8306-8e75a6b9dfb8.vsidx
 OpenCVTracking/OpenCVTracking/x64/Debug/kalman_ball_tracker.obj
+OpenCVTracking/OpenCVTracking/x64/Debug/color_pong_gesture_upgrade.obj
+OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/c6214b7be44fba4a/COLOR_PONG_GESTURE_UPGRADE.ipch
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/83130d50-c4fa-4f53-8a5e-d76958c10701.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/116df5b8-bd24-4c84-83d4-2ab427b6ba5e.vsidx
