--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ OpenCVTracking/OpenCVTracking/x64/Debug/color_pong_gesture_upgrade.obj
 OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/c6214b7be44fba4a/COLOR_PONG_GESTURE_UPGRADE.ipch
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/83130d50-c4fa-4f53-8a5e-d76958c10701.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/116df5b8-bd24-4c84-83d4-2ab427b6ba5e.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/346f8911-72a5-4603-9b75-a2bab35716ca.vsidx
