--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,9 @@ OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/c6214b7be44fba4a/COLOR_PONG_G
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/83130d50-c4fa-4f53-8a5e-d76958c10701.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/116df5b8-bd24-4c84-83d4-2ab427b6ba5e.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/346f8911-72a5-4603-9b75-a2bab35716ca.vsidx
+OpenCVTracking/OpenCVTracking/x64/Debug/color_pong_ultimate.obj
+OpenCVTracking/OpenCVTracking/pong_settings.txt
+OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/9c25bea32ff188ab/COLOR_PONG_ULTIMATE.ipch
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/f07bb5e3-cb3e-4df4-b762-e2b3b5cb48a9.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/e5e0fd67-cee8-48ad-9e2d-22086c45ada9.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/a6ce596f-7f87-4994-b346-8c0cb3ff719e.vsidx
