--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/9c25bea32ff188ab/COLOR_PONG_U
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/f07bb5e3-cb3e-4df4-b762-e2b3b5cb48a9.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/e5e0fd67-cee8-48ad-9e2d-22086c45ada9.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/a6ce596f-7f87-4994-b346-8c0cb3ff719e.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/ae63fa95-edcc-40a9-a1b2-bbec5cbe14a8.vsidx
