--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,7 @@ OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/e5e0fd67-cee8-48ad-9e2d-22086
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/a6ce596f-7f87-4994-b346-8c0cb3ff719e.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/ae63fa95-edcc-40a9-a1b2-bbec5cbe14a8.vsidx
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/28fef76c-4571-45a7-b62d-b1d2afeb8397.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/0e916fb2-9906-4629-ba82-5c95c2b0caa3.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/acfbb54e-6241-42d9-83ac-223f443353d8.vsidx
+OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/9569c3c9086d37f4/OPENCV_UDP_SENDER.ipch
+OpenCVTracking/OpenCVTracking/x64/Debug/opencv_udp_sender.obj
