--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/0e916fb2-9906-4629-ba82-5c95c
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/acfbb54e-6241-42d9-83ac-223f443353d8.vsidx
 OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/9569c3c9086d37f4/OPENCV_UDP_SENDER.ipch
 OpenCVTracking/OpenCVTracking/x64/Debug/opencv_udp_sender.obj
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c20be673-d7c5-4f11-adb6-6ca93c99f39b.vsidx
