--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/acfbb54e-6241-42d9-83ac-223f4
 OpenCVTracking/.vs/OpenCVTracking/v17/ipch/AutoPCH/9569c3c9086d37f4/OPENCV_UDP_SENDER.ipch
 OpenCVTracking/OpenCVTracking/x64/Debug/opencv_udp_sender.obj
 OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/c20be673-d7c5-4f11-adb6-6ca93c99f39b.vsidx
+OpenCVTracking/.vs/OpenCVTracking/FileContentIndex/de92e990-75a0-499d-b533-4279a8dac3f8.vsidx
